<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AdNewFragment">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>
    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_of_job"
        android:inputType="text"
        android:autofillHints="TODO" />
    <EditText
        android:id="@+id/edit_text_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_name"
        android:inputType="text"
        android:autofillHints="TODO" />
    <EditText
        android:id="@+id/edit_text_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_of_job"
        android:inputType="text"
        android:autofillHints="TODO" />
    <EditText
        android:id="@+id/edit_text_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salary_of_job"
        android:inputType="text"
        android:autofillHints="TODO" />
    <EditText
        android:id="@+id/edit_text_image_uri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/image_uri_representing_company"
        android:inputType="textUri"
        android:autofillHints="TODO" />
    <EditText
        android:id="@+id/edit_text_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/about_job_or_company"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|start"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:autofillHints="TODO" />
</LinearLayout>